Fixed whitespace in the header

--- a/css/custom.css
+++ b/css/custom.css
@@ -21,7 +21,6 @@ html {
 }
 
 body {
-	padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 	font-family:Rockwell, "Rokkitt", "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
 	font-size:24px;
 }
